# discord.cpp

./: .gitignore  .gitmodules  Api.cpp  Api.h  CMakeLists.txt  Channel.cpp  Channel.h  Client.cpp  Client.h  Guild.h  LICENSE  Message.cpp  Message.h  README.md  User.cpp  User.h  dpp.h  example.txt  ideas.md  test.cpp
icon/: full-icon-text-stylish-d.psd  full-icon-text-stylish-d.pxr  full-icon-text.psd  full-icon.psd  icon.psd
src/: Api.cpp  Api.h  Api.hpp  Channel.cpp  Channel.h  Channel.hpp  Client.cpp  Client.h  Client.hpp  Command.cpp  Command.h  Command.hpp  Embed.cpp  Embed.h  Embed.hpp  Guild.cpp  Guild.h  Guild.hpp  Message.cpp  Message.h  Message.hpp  Role.cpp  Role.h  Role.hpp  User.cpp  User.h  User.hpp  Webhook.cpp  Webhook.h  Webhook.hpp  dpp.h  urlEncode.cpp  urlEncode.h  urlEncode.hpp
src/Debug/: discord-cpp.exe.recipe  discord-cpp.vcxproj.FileListAbsolute.txt  vc142.idb
src/Debug/discord-cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  discord-cpp.lastbuildstate  discord-cpp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
